Sending a message to the bot

--- a/Bot/View/MainPage.xaml
+++ b/Bot/View/MainPage.xaml
@@ -9,6 +9,23 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <WebView x:Name="webView"/>
+        <Grid Margin="16"
+              BindingContext="{StaticResource vm}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackLayout Orientation="Horizontal"
+                         HorizontalOptions="FillAndExpand"
+                         Grid.Row="1">
+                <Entry HorizontalOptions="FillAndExpand"
+                       Text="{Binding Message, Mode=TwoWay}"/>
+                <Button Text="Send"
+                        Command="{Binding SendCommand}"
+                        TextColor="White"
+                        WidthRequest="75"
+                        BackgroundColor="#0EB1D2"/>
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
